Flower stays in place, collision in progress

--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <html>
-    <head>
-        <style>
-            html, body {
-                height: 100%;
-                width: 100%;
-                margin: 0;
-                display:flex;
-                justify-content: center;
-                align-items:center;
-            }
-        </style>
 
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.js"></script>
-        <script src="build/bundle.js"></script>
-    </head>
-    <body>
-        <!-- Code injected from JavaScript ^^ -->
-    </body>
+<head>
+    <style>
+        html,
+        body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.js"></script>
+    <script src="build/bundle.js"></script>
+</head>
+
+<body>
+    <!-- Code injected from JavaScript ^^ -->
+</body>
+
 </html>
